--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -392,11 +392,17 @@
             </div>
         </div>
         <div class="row content" style="border-top: 1px solid darkgray; margin-top: 3px">
-            <ul id="third-party-options" style="width:100%; height: 50px;">
+            <ul id="third-party-options" style="width:100%; height: 90px;">
                 <li data-name="MiniSASS">
                     <div class="row-title">
                         <input type="checkbox" value="MiniSASS" class="mini-sass-check">
                         MiniSASS
+                    </div>
+                </li>
+                <li data-name="InWARDS">
+                    <div class="row-title">
+                        <input type="checkbox" value="InWARDS" class="inward-check">
+                        <span class="label">InWARDS Water Quality</span>
                     </div>
                 </li>
             </ul>
