--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -23,7 +23,7 @@
                         class="fa fa-angle-right"></i></span>
                 </div>
             </div>
-            <div id="search-error-text">Minimal 3 character or empty.</div>
+            <div id="search-error-text">Minimal 3 characters or empty.</div>
         </div>
         <div class="row filter-header-row">
             <div class="col-lg-12 search-info">
