--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -298,7 +298,7 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <table id="filter-history-table"></table>
+                        <div class="col-12" id="filter-history-table"></div>
                     </div>
                 </div>
                 {# Distribution #}
