--- a/sass/templates/sass_dashboard_multiple_sites.html
+++ b/sass/templates/sass_dashboard_multiple_sites.html
@@ -65,7 +65,7 @@
                     <div class="table-title">
                         Filters
                     </div>
-                    <table class="table table-condensed table-striped filter-table"></table>
+                    <table class="table table-condensed table-striped filter-table filter-history-table"></table>
                 </div>
             </div>
         </div>
