Fix login session

--- a/bims/templates/navigation_bar.html
+++ b/bims/templates/navigation_bar.html
@@ -25,6 +25,7 @@
                         {% if is_sass_enabled %}
                             <a class="dropdown-item" id="navbar-biblio" href="/sass/list/">SASS</a>
                         {% endif %}
+                        <a class="dropdown-item" id="navbar-geonode" href="/cms">WAGTAIL CMS</a>
                          {% if user.is_authenticated %}
                              <div class="dropdown-divider"></div>
                             <a class="dropdown-item" id="navbar-geonode" href="/layers">GIS CATALOGUE</a>
