--- a/bims/templates/base.html
+++ b/bims/templates/base.html
@@ -306,26 +306,10 @@
     {% endif %}
     <script src="{% static "geonode/js/utils/utils.js" %}?v={{ VERSION }}"></script>
     <script src="{% static "geonode/js/base/base.js" %}?v={{ VERSION }}"></script>
-    {% include 'autocomplete_light/static.html' %}
     <script type="text/javascript" src="{% url "javascript-catalog" %}"></script>
     {% block extra_script %}{% endblock extra_script %}
-    <script type="text/javascript">
-        var autocomplete = $('#search_input').yourlabsAutocomplete({
-            url: '{% url "autocomplete_light_autocomplete" "ResourceBaseAutocomplete" %}',
-            choiceSelector: 'span',
-            hideAfter: 200,
-            minimumCharacters: 1,
-            placeholder: '{% trans 'Type your search here ...' %}',
-            appendAutocomplete: $('#search_input'),
-            autoHilightFirst: false
-        });
-        $('#search_input').bind('selectChoice', function(e, choice, autocomplete) {
-            if(choice[0].children[0] == undefined) {
-                $('#search_input').val($(choice[0]).text());
-                $('#search').submit();
-            }
-        });
-    </script>
+    <!-- Autocomplete script for input boxes -->
+    <script src="{% static "geonode/js/search/autocomplete.js" %}"></script>
     <script>
         // Workaround to fix the autocomplete box positions
         yourlabs.Autocomplete.prototype.fixPosition = function(html) {
@@ -342,7 +326,6 @@
             }
         };
     </script>
-    <script type="text/javascript" src="{% url "lang" %}"></script>
 
     <div class="modal fade" style="width: 100%; height: 100%;" id="_resource_uploading" data-backdrop="static" data-keyboard="false" aria-hidden="true">
         <div class="modal-dialog">
