Update production build

--- a/bims/templates/bims/blog_page.html
+++ b/bims/templates/bims/blog_page.html
@@ -11,6 +11,7 @@
     <style>
         .blog-content {
             margin-top: 125px;
+            margin-bottom: 125px;
         }
         .blog-title {
             font-size: 25pt;
