Update algae form

--- a/bims/templates/collections_form_layouts/algae_biomass.html
+++ b/bims/templates/collections_form_layouts/algae_biomass.html
@@ -4,7 +4,7 @@
     <thead>
     <tr>
         <th scope="col">Indicators</th>
-        <th scope="col">Sampling location</th>
+        <th scope="col">Sampling details</th>
         <th scope="col">Measurement</th>
     </tr>
     </thead>
@@ -27,16 +27,11 @@
         <td>
             <select class="form-control CHLA-B"
                     name="indicator_chl_a">
-                <option value=""> Not specified
-                </option>
                 <option value="Whole stone">
                     Whole stone
                 </option>
                 <option value="Soft bottom">
                     Soft bottom
-                </option>
-                <option value="In situ">
-                    In situ
                 </option>
                 <option value="Artificial substrate">
                     Artificial substrate
@@ -44,8 +39,6 @@
             </select>
              <select class="form-control CHLA-W"
                     name="indicator_chl_a" style="display: none">
-                <option value=""> Not specified
-                </option>
                 <option value="Water column">
                     Water column
                 </option>
@@ -83,8 +76,6 @@
         <td>
             <select class="form-control AFDM-B"
                     name="indicator_afdm">
-                <option value=""> Not specified
-                </option>
                 <option value="Whole cobble">
                     Whole cobble
                 </option>
@@ -97,8 +88,6 @@
             </select>
             <select class="form-control AFDM-W"
                     name="indicator_afdm" style="display: none">
-                <option value=""> Not specified
-                </option>
                 <option value="Water column">
                     Water column
                 </option>
