--- a/bims/templates/collections_form_page.html
+++ b/bims/templates/collections_form_page.html
@@ -259,6 +259,9 @@
                             <option value="Preserved lugols">
                                 Preserved lugols
                             </option>
+                            <option value="Frozen">
+                                Frozen
+                            </option>
                         </select>
                     </div>
                 </div>
@@ -309,16 +312,29 @@
                                 Abundance
                             </div>
                             <div class="pull-left">
-                                <select class="form-control "
-                                        name="abundance_type">
-                                    <option value="number"> Number</option>
-                                    <option value="percentage"> Percentage
-                                        Abundance
-                                    </option>
-                                    <option value="density"> Density
-                                        (m&sup2;)
-                                    </option>
-                                </select>
+                                {% if taxon_group_name == 'Algae' %}
+                                     <select class="form-control "
+                                            name="abundance_type">
+                                        <option value="species_valve_per_frustule_count"> Species valve/frustule count</option>
+                                        <option value="percentage"> Percentage
+                                            Abundance
+                                        </option>
+                                        <option value="density_cells_per_m2"> Density (cells/m2)
+                                        <option value="density_cells_per_mL"> Density (cells/mL)
+                                        </option>
+                                    </select>
+                                {% else %}
+                                    <select class="form-control "
+                                            name="abundance_type">
+                                        <option value="number"> Number</option>
+                                        <option value="percentage"> Percentage
+                                            Abundance
+                                        </option>
+                                        <option value="density"> Density
+                                            (m&sup2;)
+                                        </option>
+                                    </select>
+                                {% endif %}
                             </div>
                         </th>
                     </tr>
