--- a/bims/templates/account/logout.html
+++ b/bims/templates/account/logout.html
@@ -1,33 +1,33 @@
-{% load staticfiles %}
+{% extends 'main_base.html' %}
 {% load i18n %}
 {% load account socialaccount %}
+{% load static from staticfiles %}
 
-{% block css_head %}
-    <title> {{ APPLICATION_NAME }} | Logout </title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.css" rel="stylesheet" type="text/css" media="screen, projection" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+{% block subtitle %}Login{% endblock %}
 
+{% block head %}
     <!-- Chosen library -->
     <link rel="stylesheet" href="{% static 'chosen/chosen.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/form.css' %}">
     <link rel="stylesheet" href="{% static 'css/account.css' %}">
-{% endblock %}
 
-{% block js_head %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="https://cdn.rawgit.com/leafo/sticky-kit/v1.1.2/jquery.sticky-kit.min.js"></script>
 
-    <script src="{% static 'js/libs/chosen/chosen.jquery.min.js' %}"></script>
+    <script src="{% static 'chosen/chosen.jquery.min.js' %}"></script>
     <script src="{% static 'js/form.js' %}"></script>
-
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('a.google').html($('.google-button'));
+            $('a.github').html($('.github-button'));
+        });
+    </script>
 {% endblock %}
 
-{% block container %}
+{% block body_content %}
     <div class="content">
         {% block content %}
 
@@ -35,14 +35,17 @@
             <div class="container">
 
                 <div class="custom-form-container">
+
+                    <h1>{% trans "LOG OUT" %}</h1>
+
                     <p style="font-size:12pt">{% trans 'Are you sure you want to log out?' %}</p>
-                    <br/><br/>
                     <form class="logout" method="POST" action="{% url 'account_logout' %}">{% csrf_token %}
                         {% if redirect_field_value %}
                             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                         {% endif %}
                         <button class="login custom-form-submit btn-login" type="submit">{% trans "LOG OUT" %}</button>
                     </form>
+
                 </div>
             </div> <!-- /container -->
             </div>
