Add in situ to CHLA-B

--- a/bims/templates/collections_form_layouts/algae_biomass.html
+++ b/bims/templates/collections_form_layouts/algae_biomass.html
@@ -33,6 +33,9 @@
                 <option value="Soft bottom">
                     Soft bottom
                 </option>
+                <option value="In situ">
+                    In situ
+                </option>
                 <option value="Artificial substrate">
                     Artificial substrate
                 </option>
