--- a/bims/templates/collections_form_layouts/algae_biomass.html
+++ b/bims/templates/collections_form_layouts/algae_biomass.html
@@ -27,8 +27,8 @@
         <td>
             <select class="form-control CHLA-B"
                     name="indicator_chl_a">
-                <option value="Whole stone">
-                    Whole stone
+                <option value="Whole cobble">
+                    Whole cobble
                 </option>
                 <option value="Soft bottom">
                     Soft bottom
