Added information on third party layer

--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -392,12 +392,17 @@
             </div>
         </div>
         <div class="row content" style="border-top: 1px solid darkgray; margin-top: 3px">
-            <ul id="third-party-options" style="width:100%; height: 90px;">
-                <li data-name="MiniSASS">
+            <ul id="third-party-options" style="width:100%; height: 320px;">
+                <li data-name="MiniSASS" style="height: 270px !important;">
                     <div class="row-title">
                         <input type="checkbox" value="MiniSASS" class="mini-sass-check">
                         MiniSASS
                     </div>
+                    <small class="text-muted">
+                        miniSASS is a citizen science tool which can be used by anyone to monitor the health of a river.
+                        A sample of macroinvertebrates are collected from the water, and depending on which groups are found, you have a measure of the general river health and water quality in that river.
+                        The data are served with permission from <a href="http://www.minisass.org/en/">http://www.minisass.org/en/</a>, and further information about the tool is available via this website.
+                    </small>
                 </li>
                 <li data-name="InWARDS">
                     <div class="row-title">
